rust/macros/tests/invalid/target/debug/deps/leading_comma-4f0afd0a39401dd9.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma-4f0afd0a39401dd9.d: leading_comma.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libleading_comma-4f0afd0a39401dd9.rmeta: leading_comma.rs Cargo.toml

leading_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
